--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2946,6 +2946,7 @@ td button:hover {
   display: flex;
   position: absolute;
   bottom: 0;
+  z-index: 2001;
   justify-content: center;
   align-items: center;
 }
